# ToyUtility

./: .gitignore  CMakeLists.txt  README.md
Include/ToyUtility/Container/: Common.h  List.h  Map.h  Set.h  String.h  UnorderedMap.h  UnorderedSet.h  Vector.h
Include/ToyUtility/DataStream/: DataStream.h  FileDataStream.h  MemoryDataStream.h
Include/ToyUtility/DesignPattern/: IModule.h  ISingleton.h  IUncopyable.h  RefCounted.h
Include/ToyUtility/Encode/: Base64.h
Include/ToyUtility/Event/: Event.h  EventHub.h  EventListener.h
Include/ToyUtility/File/: FileSystemPath.h
Include/ToyUtility/FileSystem/: FileHandle.h  FilePath.h  FileSystem.h
Include/ToyUtility/FileSystem/windows/: WindowsFileHandle.h  WindowsFileSystem.h
Include/ToyUtility/Log/: Logger.h
Include/ToyUtility/Math/: AABox.h  Bounds.h  Capsule.h  ConvexVolume.h  Degree.h  Line2.h  LineSegment3.h  Math.h  MathFwdDecl.h  Matrix3.h  Matrix4.h  MatrixNxM.h  Plane.h  Quaternion.h  Radian.h  Rational.h  Ray.h  Rect2.h  Rect2I.h  Rect3.h  Sphere.h  Torus.h  TransformPRS.h  Vector2.h  Vector2I.h  Vector3.h  Vector3I.h  Vector4.h  Vector4I.h
Include/ToyUtility/Memory/: FrameAllocator.h  NormalAllocator.h  SmartPtr.h
Include/ToyUtility/Prerequisites/: PreDefine.h  Types.h
Include/ToyUtility/Random/: UUID.h
Include/ToyUtility/Serialization/: BinarySerializer.h  JsonSerializer.h  JsonUnserializer.h  Serializable.h  Serializer.h  TextSerializer.h  Unserializer.h  XmlSerializer.h  XmlUnserializer.h  Yaml2Serializer.h  Yaml2Unserializer.h
Include/ToyUtility/String/: String.h
Source/: CMakeLists.txt  CMakeSources.cmake  ToyUtilityConfig.h.in
Source/DataStream/: DataStream.cpp  FileDataStream.cpp  MemoryDataStream.cpp
Source/Encode/: Base64.cpp
Source/Event/: EventListener.cpp
Source/FileSystem/: FileHandle.cpp  FilePath.cpp  FileSystem.cpp
Source/FileSystem/windows/: WindowsFileHandle.cpp  WindowsFileSystem.cpp
Source/Math/: AABox.cpp  Bounds.cpp  Capsule.cpp  ConvexVolume.cpp  Degree.cpp  Line2.cpp  LineSegment3.cpp  Math.cpp  Matrix3.cpp  Matrix4.cpp  Plane.cpp  Quaternion.cpp  Radian.cpp  Ray.cpp  Rect2.cpp  Rect2I.cpp  Rect3.cpp  Sphere.cpp  Torus.cpp  TransformPRS.cpp  Vector2.cpp  Vector2I.cpp  Vector3.cpp  Vector4.cpp
Source/Random/: UUID.cpp
Source/Serialization/: JsonSerializer.cpp  JsonUnserializer.cpp  Serializer.cpp  TextSerializer.cpp  XmlSerializer.cpp  XmlUnserializer.cpp  Yaml2Serializer.cpp  Yaml2Unserializer.cpp
Test/: CMakeLists.txt  Main.cpp
Test/FileSystem/: FileSystem-ListFiles-Test.cpp
Test/Memory/: FrameAllocatorTest.cpp
Test/Serialization/: JsonSerializerTest.cpp
