# 
# ToyUtility
# 

CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(TOY_UTILITY)

SET(TOY_UTILITY_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/Include)
SET(TOY_UTILITY_SOURCE_DIR ${PROJECT_SOURCE_DIR}/Source)

MESSAGE(STATUS "${PROJECT_NAME} CMake Begin...")

ADD_SUBDIRECTORY(Source)
ADD_SUBDIRECTORY(Test)

MESSAGE(STATUS "${PROJECT_NAME} CMake End")