# 
# ToyUtility
# 

CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

if(NOT TOY_UTILITY_LOADED)

    PROJECT(TOY_UTILITY)

    SET(TOY_UTILITY_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/Include)
    SET(TOY_UTILITY_SOURCE_DIR ${PROJECT_SOURCE_DIR}/Source)

    MESSAGE(STATUS "${PROJECT_NAME} CMake Begin...")

    ADD_SUBDIRECTORY(Source)
    ADD_SUBDIRECTORY(Test)

    MESSAGE(STATUS "${PROJECT_NAME} CMake End")

    SET(TOY_UTILITY_LOADED TRUE CACHE PATH "ToyUtility project loaded" FORCE)

endif()